--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,13 +6,37 @@ on:
 name: Create Release
 
 jobs:
-  create-github-release:
+  publish-to-vs-marketplace:
+    name: Publish to Visual Studio Marketplace
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+
+      - name: Run npm clean-install
+        run: npm ci
+
+      - name: Publish to Marketplace
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
+          registryUrl: https://marketplace.visualstudio.com
+
+  create-github-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: publish-to-vs-marketplace
     permissions:
       contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Create Release
         run: gh release create ${{ github.ref }} --generate-notes
         env:
