--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,10 +27,30 @@ jobs:
           pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
           registryUrl: https://marketplace.visualstudio.com
 
+  publish-to-open-vsx:
+    name: Publish to Open VSX Registry
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+
+      - name: NPM clean-install
+        run: npm ci
+
+      - name: Publish to Registry
+        uses: HaaLeo/publish-vscode-extension@v1
+        with:
+          pat: ${{ secrets.OPEN_VSX_TOKEN }}
+
   create-github-release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: publish-to-vs-marketplace
+    needs: [publish-to-vs-marketplace, publish-to-open-vsx]
     permissions:
       contents: write
     steps:
