--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,9 @@
+name: Create Release
+
 on:
   push:
-    branches:
-      - main
     tags:
       - 'v*'
-
-name: Create Release
 
 jobs:
   publish-to-vs-marketplace:
@@ -15,15 +13,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
 
-      - name: NPM clean-install
+      - name: Install npm packages
         run: npm ci
 
-      - name: Publish to Marketplace
+      - name: Publish to marketplace
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.VS_MARKETPLACE_TOKEN }}
@@ -36,15 +35,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          cache: 'npm'
 
-      - name: NPM clean-install
+      - name: Install npm packages
         run: npm ci
 
-      - name: Publish to Registry
+      - name: Publish to registry
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.OPEN_VSX_TOKEN }}
@@ -56,10 +56,10 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Create Release
+      - name: Create release
         run: gh release create ${{ github.ref }} --generate-notes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
