--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
     "@commitlint/config-conventional": "^17.8.0"
   },
   "scripts": {
-    "prepare": "husky install",
-    "release:patch": "npm version patch --sign-git-tag",
-    "release:minor": "npm version minor --sign-git-tag",
-    "release:major": "npm version major --sign-git-tag"
+    "prepare": "husky install"
   }
 }
